byta namn från gamestill services, fixade service.html sidan

--- a/service.html
+++ b/service.html
@@ -20,7 +20,7 @@
                  <li><a href="about.html">About</a></li>
                  <li><a href="support.html">Support</a></li>
                  <li><a href="news.html">News</a></li>
-                 <li><a href="games.html">Games</a></li>
+                 <li><a href="service.html">Service</a></li>
                  <li><a href="account.html">Account</a></li>
              </ul>
     
@@ -32,6 +32,14 @@
          </nav>
         </div>
         <main>
+            <h1>Our Hosts</h1>
+            <a href="#" id="game01" class="game_preview">ARK - 9,99€/month</a>
+            <a href="#" id="game02" class="game_preview">Minecraft - 4,99€/month</a>
+            <a href="#" id="game03" class="game_preview">TeamSpeak - 0,89€/month</a>
+            <a href="#" id="game04" class="game_preview">Terraria - 3,99€/month</a>
+            <a href="#" id="game05" class="game_preview">DayZ - 4,99€/month</a>
+            <a href="#" id="game06" class="game_preview">Rust - 5,99€/month</a>
+
 
         </main>
         <footer>  
