--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
                  <li><a href="about.html">About</a></li>
                  <li><a href="support.html">Support</a></li>
                  <li><a href="news.html">News</a></li>
-                 <li><a href="games.html">Games</a></li>
+                 <li><a href="service.html">Services</a></li>
                  <li><a href="account.html">Account</a></li>
              </ul>
     
