fixa account sidan, håller på att fixa about sidan

--- a/about.html
+++ b/about.html
@@ -31,8 +31,11 @@
              </div>
          </nav>
         </div>
-        <main>
+        <main class="single_section">
             <h1>ABOUT</h1>
+            <section class="main_section">
+                Hello
+            </section>
 
         </main>
         <footer>  
