--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <section>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti repellat mollitia magnam a esse praesentium cumque sit? Corrupti, explicabo? Earum quam dolor aspernatur distinctio aliquid cupiditate adipisci perspiciatis illo maxime numquam ut molestias, ipsa hic nisi est explicabo laudantium voluptatum repudiandae ab nam quidem inventore tempore! Qui quo sequi velit neque ullam ducimus expedita rem amet facere, ex deserunt enim dolorem voluptates vitae? Harum adipisci ut itaque? Ea, aliquid iure? Quo ipsam commodi doloribus quos illum praesentium cupiditate aliquid repellendus dolor magnam vel pariatur perferendis quae doloremque dolorum eos nulla amet necessitatibus, possimus inventore consectetur tempore culpa! Iure, magni consectetur.</section>
             </article>
             <div class="read_more">
-                <a href="#" class="button">Read more</a>
+                <a href="support.html" class="button">Read more</a>
             </div>
             </div>
 
@@ -75,12 +75,12 @@
 
 
             <div class="read_more">
-                <a href="#" class="button">Read more</a>
+                <a href="news.html" class="button">Read more</a>
             </div>
             </div>
           
         </section>  
-        <a href="service.html" class="main_section" id="section4"><h1>our hosts</h1>
+        <a href="service.html" class="main_section" id="section4"><h1 class="section_h1">Our Hosts</h1>
             <article></article>   
         </a>
         
@@ -90,6 +90,14 @@
     </main>
     <footer>
         <h1>Contact us</h1>
+       <div>
+           <section>
+               <a href="#"><img src="" alt="" class="contact_icon"></a> 
+           </section>
+           <section>
+
+           </section>
+       </div>
     </footer>
 
 
