--- a/news.html
+++ b/news.html
@@ -12,6 +12,7 @@
 
 
     <div id="grid_wrapper_2">
+        <h1>About</h1>
         <div class="headnav">
          <header>EzHost</header>
          <nav>
