footer saker, img och flex system

--- a/account.html
+++ b/account.html
@@ -10,7 +10,7 @@
 <body>
     <div id="grid_wrapper_account">
         <div class="headnav">
-         <header>EzHost</header>
+        <header> <a href="index.html">EzHost</a> </header>
          <nav>
              <ul class="navlinks">
                  <li ><a href="index.html">Home</a></li>
