--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
 <div id="main_wrapper">
     <div class="headnav">
-     <header>EzHost</header>
+     <header> <a href="index.html">EzHost</a> </header>
      <nav>
          <ul class="navlinks">
              <li ><a href="index.html">Home</a></li>
@@ -40,6 +40,9 @@
             <h1>About</h1>
             <div class="article_section_fade">
             <article>We are a server hosting website, our servers are equipped with the latest technology in servertech. We also Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure in ipsum omnis temporibus accusantium officiis eos, voluptas, ab aliquid quisquam pariatur mollitia doloribus nemo aspernatur! Sit incidunt inventore, tenetur dolor modi sunt, dicta laboriosam esse magni voluptas maxime iusto repudiandae vel aspernatur facere doloremque suscipit. Odit, velit quas. Illum voluptatum id quod cupiditate modi. Praesentium cumque ex amet ipsum eligendi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium eligendi odio fugit quisquam, aspernatur nihil sint neque commodi quas earum voluptatibus voluptates saepe repudiandae molestiae ipsa enim impedit minus iusto officiis excepturi voluptatem esse magni blanditiis. Autem nulla laudantium voluptatibus, ut laboriosam, esse veniam numquam fugit impedit, architecto iusto sed rerum nihil doloremque aliquam quae. Vitae et veritatis impedit nulla numquam sit delectus consectetur assumenda. Repellat, cumque. Commodi dolor reiciendis consequatur quibusdam. Rerum, tempore sit nihil libero dignissimos dolorum ad. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius pariatur inventore doloribus nemo? Voluptate laboriosam numquam repellendus officiis. Odit dignissimos, optio provident dolorum dolor at, facilis blanditiis tempora consequatur, modi sapiente asperiores ullam! Maiores tempore cumque doloribus molestiae iusto dolore aliquam harum architecto enim qui esse quod, velit voluptates commodi.</article>
+            <article>We come from a background of NASA experience and Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quidem cumque quas distinctio! Natus, perspiciatis reiciendis hic voluptas quidem ullam pariatur quo deleniti assumenda. Nesciunt asperiores aspernatur dolores ab sapiente aperiam sunt necessitatibus et fuga ex placeat, veritatis fugiat eligendi minima eum? Dolores facere porro doloribus eius vel quis quo.
+
+            </article>
             <div class="read_more">
                 <a href="about.html" class="button">Read more</a>
             </div>
@@ -51,6 +54,7 @@
             <div class="article_section_fade">
             <article>
                 <section>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit neque iste beatae facilis fugiat, rerum ut fugit perferendis, delectus, nostrum doloremque atque perspiciatis itaque aspernatur hic incidunt. Cumque voluptatibus nihil facilis architecto doloremque est aut quis, fugit delectus inventore temporibus earum eum dolor molestiae neque modi libero laborum natus ad qui odit in ab sapiente! Odit tempore voluptates libero provident quam nulla illum dignissimos facere. Tempore quidem ea nulla iusto ex magni quos rerum, ipsa quo fuga unde velit aspernatur quas quisquam a vero quam hic, cum illo rem natus expedita. Deserunt, iusto quos architecto fugiat sunt nisi ullam? Necessitatibus.</section>
+                <section>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam sapiente, maiores omnis perspiciatis expedita possimus commodi, eos cupiditate nostrum, ipsam minima placeat distinctio praesentium sunt obcaecati repudiandae voluptatibus! Ratione exercitationem fugit cumque eum? Doloremque dolorem fuga, officiis doloribus repudiandae voluptatum pariatur vel quis? Amet repellat, iusto atque beatae accusantium animi.</section>
                 <section>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti repellat mollitia magnam a esse praesentium cumque sit? Corrupti, explicabo? Earum quam dolor aspernatur distinctio aliquid cupiditate adipisci perspiciatis illo maxime numquam ut molestias, ipsa hic nisi est explicabo laudantium voluptatum repudiandae ab nam quidem inventore tempore! Qui quo sequi velit neque ullam ducimus expedita rem amet facere, ex deserunt enim dolorem voluptates vitae? Harum adipisci ut itaque? Ea, aliquid iure? Quo ipsam commodi doloribus quos illum praesentium cupiditate aliquid repellendus dolor magnam vel pariatur perferendis quae doloremque dolorum eos nulla amet necessitatibus, possimus inventore consectetur tempore culpa! Iure, magni consectetur.</section>
             </article>
             <div class="read_more">
@@ -71,6 +75,10 @@
                 <h1>New 1.2 Update!</h1>
                 <section>New annonsements Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ullam maiores quo reprehenderit illo quos doloremque facilis rerum? Error, tenetur tempore soluta eos sint culpa ex? Enim ut commodi deserunt quibusdam! Corporis quidem quis eligendi, dignissimos fugit atque assumenda doloremque, quod et maxime cum soluta facilis quo cupiditate vero temporibus modi optio pariatur consectetur recusandae. Ipsum expedita eaque nihil, quasi atque aperiam distinctio ut perspiciatis, debitis velit magni eligendi qui praesentium commodi accusamus consequuntur fugit aliquid suscipit. Ducimus odit recusandae, quis voluptatem itaque perspiciatis adipisci beatae suscipit earum rerum tenetur deserunt distinctio similique neque. Optio saepe dignissimos delectus odit distinctio!</section>
                 <section>They have also added Lorem ipsum dolor sit amet consectetur adipisicing elit. Et aspernatur vitae rem eligendi veniam ratione temporibus voluptatibus cum tempora, possimus laudantium quis officiis repellendus voluptas voluptate fugit eius eaque a reiciendis nihil veritatis delectus sed dolore! Nesciunt perferendis cum quisquam, rerum, quasi labore numquam explicabo ea ducimus at enim tenetur quas! Nulla fugiat rerum molestias necessitatibus aliquid fugit earum animi voluptatibus accusamus quis, placeat sint architecto voluptas tenetur. Possimus in, voluptas numquam consequuntur autem dolore. Similique at ullam accusantium, perferendis, voluptatum alias architecto molestias sequi inventore ad fugiat? Voluptates culpa aliquam quisquam velit provident est veniam et alias minus ipsum?</section>
+            </article>
+            <article>
+                <h1>We are expanding our serves overseas!</h1>
+                <section>New annonsements Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ullam maiores quo reprehenderit illo quos doloremque facilis rerum? Error, tenetur tempore soluta eos sint culpa ex? Enim ut commodi deserunt quibusdam! Corporis quidem quis eligendi, dignissimos fugit atque assumenda doloremque, quod et maxime cum soluta facilis quo cupiditate vero temporibus modi optio pariatur consectetur recusandae. Ipsum expedita eaque nihil, quasi atque aperiam distinctio ut perspiciatis, debitis velit magni eligendi qui praesentium commodi accusamus consequuntur fugit aliquid suscipit. Ducimus odit recusandae, quis voluptatem itaque perspiciatis adipisci beatae suscipit earum rerum tenetur deserunt distinctio similique neque. Optio saepe dignissimos delectus odit distinctio!</section>
             </article>
 
 
@@ -106,8 +114,12 @@
                 <p>Contact us on our discord!</p> 
                 </div>
                 <div class="footer_section">
-                 <a href="https://discord.gg/mcRsZmEq"><img src="img/host_discord_logo.png" alt="discord logo" class="contact_icon"></a> 
-                 <p>Contact us on our discord!</p> 
+                 <a href="https://discord.gg/mcRsZmEq"><img src="img/host_phone_logo.png" alt="phone logo" class="contact_icon"></a> 
+                 <div class="icon_text">
+                    <p>Call us on the phone!</p> 
+                    <p>+46 0724242424</p>
+                </div>
+                
                  </div>
             </div>
             </section>
