--- a/news.html
+++ b/news.html
@@ -14,7 +14,7 @@
     <div id="grid_wrapper_2">
         <h1>About</h1>
         <div class="headnav">
-         <header>EzHost</header>
+        <header> <a href="index.html">EzHost</a> </header>
          <nav>
              <ul class="navlinks">
                  <li ><a href="index.html">Home</a></li>
