--- a/service.html
+++ b/service.html
@@ -13,7 +13,7 @@
 
     <div id="grid_wrapper_2">
         <div class="headnav">
-         <header>EzHost</header>
+        <header> <a href="index.html">EzHost</a> </header>
          <nav>
              <ul class="navlinks">
                  <li ><a href="index.html">Home</a></li>
