service section flex

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
      </nav>
     </div>
-    <main>
+    <main class="index_sections">
         <h1>HOME</h1>
         <section class="main_section" id="section1">
             <h1>About</h1>
@@ -64,7 +64,7 @@
 
         </section>
             
-        <section class="main_section" id="section3"><h1>News</h1>
+        <section class="main_section" id="section3" ><h1>News</h1>
             <div class="article_section_fade">
             <article>
                 <h1>Big news!</h1>
