--- a/news.html
+++ b/news.html
@@ -11,8 +11,8 @@
     
 
 
-    <div id="grid_wrapper_2">
-        <h1>About</h1>
+    <div class="grid_wrapper_single">
+        
         <div class="headnav">
         <header> <a href="index.html">EzHost</a> </header>
          <nav>
@@ -32,7 +32,7 @@
              </div>
          </nav>
         </div>
-        <main>
+        <main class="one_main">
             <h1>NEWS</h1>
             <section class="main_section">
                 <article>
@@ -95,8 +95,6 @@
         </footer>
 
     </div>
-
-
     <script src="js/script.js"></script>
 </body>
 </html>
