--- a/support.html
+++ b/support.html
@@ -11,7 +11,7 @@
     
 
 
-    <div>
+    <div class="grid_wrapper_single">
         <div class="headnav">
         <header> <a href="index.html">EzHost</a> </header>
          <nav>
@@ -31,10 +31,10 @@
              </div>
          </nav>
         </div>
-        <main class="single_section">
+        <main class="one_main">
             <h1>SUPPORT</h1>
             <section class="main_section">
-                <article>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit neque iste beatae facilis fugiat, rerum ut fugit perferendis, delectus, nostrum doloremque atque perspiciatis itaque aspernatur hic incidunt. Cumque voluptatibus nihil facilis architecto doloremque est aut quis, fugit delectus inventore temporibus earum eum dolor molestiae neque modi libero laborum natus ad qui odit in ab sapiente! Odit tempore voluptates libero provident quam nulla illum dignissimos facere. Tempore quidem ea nulla iusto ex magni quos rerum, ipsa quo fuga unde velit aspernatur quas quisquam a vero quam hic, cum illo rem natus expedita. Deserunt, iusto quos architecto fugiat sunt nisi ullam? Necessitatibus.</article>
+                <article>We offer support 24/7, if you need any kind of help, our staff will be ready at all time. Out staff can be reached in multiple ways to make sure you have it easy. You can contact us on phone/sms/discord/email. some of our other things are for example:</article>
                 <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam sapiente, maiores omnis perspiciatis expedita possimus commodi, eos cupiditate nostrum, ipsam minima placeat distinctio praesentium sunt obcaecati repudiandae voluptatibus! Ratione exercitationem fugit cumque eum? Doloremque dolorem fuga, officiis doloribus repudiandae voluptatum pariatur vel quis? Amet repellat, iusto atque beatae accusantium animi.</article>
                 <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam sapiente, maiores omnis perspiciatis expedita possimus commodi, eos cupiditate nostrum, ipsam minima placeat distinctio praesentium sunt obcaecati repudiandae voluptatibus! Ratione exercitationem fugit cumque eum? Doloremque dolorem fuga, officiis doloribus repudiandae voluptatum pariatur vel quis? Amet repellat, iusto atque beatae accusantium animi.</article>
                 <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam sapiente, maiores omnis perspiciatis expedita possimus commodi, eos cupiditate nostrum, ipsam minima placeat distinctio praesentium sunt obcaecati repudiandae voluptatibus! Ratione exercitationem fugit cumque eum? Doloremque dolorem fuga, officiis doloribus repudiandae voluptatum pariatur vel quis? Amet repellat, iusto atque beatae accusantium animi.</article>
