--- a/service.html
+++ b/service.html
@@ -34,12 +34,12 @@
         <main class="two_main" class="grid_wrapper_double">
             <h1>Our Hosts</h1>
             <div class="game_wrapper">
-            <a href="#" id="game01" class="game_preview">ARK - 9,99€/month</a>
-            <a href="#" id="game02" class="game_preview">Minecraft - 4,99€/month</a>
-            <a href="#" id="game03" class="game_preview">TeamSpeak - 0,89€/month</a>
-            <a href="#" id="game04" class="game_preview">Terraria - 3,99€/month</a>
-            <a href="#" id="game05" class="game_preview">DayZ - 4,99€/month</a>
-            <a href="#" id="game06" class="game_preview">Rust - 5,99€/month</a>
+            <a href="account.html" id="game01" class="game_preview">ARK - 9,99€/month</a>
+            <a href="account.html" id="game02" class="game_preview">Minecraft - 4,99€/month</a>
+            <a href="account.html" id="game03" class="game_preview">TeamSpeak - 0,89€/month</a>
+            <a href="account.html" id="game04" class="game_preview">Terraria - 3,99€/month</a>
+            <a href="account.html" id="game05" class="game_preview">DayZ - 4,99€/month</a>
+            <a href="account.html" id="game06" class="game_preview">Rust - 5,99€/month</a>
             </div>
 
 
