--- a/service.html
+++ b/service.html
@@ -13,7 +13,7 @@
 
     <div id="grid_wrapper_service">
         <div class="headnav">
-        <header> <a href="index.html">EzHost</a> </header>
+        <header> <a href="index.html"><img class="ezhost_logo"src="/img/host_ezhost_logo.png" alt="ezhost logga">EzHost</a></header>
          <nav>
              <ul class="navlinks">
                  <li ><a href="index.html">Home</a></li>
