--- a/about.html
+++ b/about.html
@@ -34,16 +34,25 @@
         <main class="one_main">
             <h1>ABOUT</h1>
             <section class="main_section" class="single_section">
-                <section id="top_section"><article>We are a server hosting website, our servers are equipped with the latest technology in servertech. We also Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure in ipsum omnis temporibus accusantium officiis eos, voluptas, ab aliquid quisquam pariatur mollitia doloribus nemo aspernatur! Sit incidunt inventore, tenetur dolor modi sunt, dicta laboriosam esse magni voluptas maxime iusto repudiandae vel aspernatur facere doloremque suscipit. Odit, velit quas. Illum voluptatum id quod cupiditate modi. Praesentium cumque ex amet ipsum eligendi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium eligendi odio fugit quisquam, aspernatur nihil sint neque commodi quas earum voluptatibus voluptates saepe repudiandae molestiae ipsa enim impedit minus iusto officiis excepturi voluptatem esse magni blanditiis. Autem nulla laudantium voluptatibus, ut laboriosam, esse veniam numquam fugit impedit, architecto iusto sed rerum nihil doloremque aliquam quae. Vitae et veritatis impedit nulla numquam sit delectus consectetur assumenda. Repellat, cumque. Commodi dolor reiciendis consequatur quibusdam. Rerum, tempore sit nihil libero dignissimos dolorum ad. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius pariatur inventore doloribus nemo? Voluptate laboriosam numquam repellendus officiis. Odit dignissimos, optio provident dolorum dolor at, facilis blanditiis tempora consequatur, modi sapiente asperiores ullam! Maiores tempore cumque doloribus molestiae iusto dolore aliquam harum architecto enim qui esse quod, velit voluptates commodi.</article>
+                <section id="top_section">
+                    <div class="text_block">
+                        <h1>How we came to be</h1>
+                   <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, adipisci natus recusandae numquam harum ex sequi facere quas necessitatibus quo provident magnam repellendus cum. Itaque modi expedita dolores voluptatem minus est, quis autem possimus maxime quidem dolorum doloribus, quibusdam alias et. At sit voluptatibus, ab neque voluptas dolorem veniam assumenda placeat unde, soluta dolorum libero facere ad in? Labore aliquam illum nemo beatae iste quam, dolores laboriosam accusantium recusandae ab iusto neque at aperiam, non magnam odio a magni esse!</article>
+                   <h3>Our future goals</h3>
+                   <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quo vero nesciunt optio, harum eveniet doloremque! Odio adipisci deserunt possimus cupiditate fuga temporibus delectus neque veniam, debitis consequuntur qui dolorum dolore, provident amet quis aperiam atque, ipsa a vitae consequatur inventore? Debitis atque ratione animi dolorum aliquid distinctio tempore perferendis libero voluptas, nam vitae facere esse architecto alias voluptatem est.</article>
+                </div>
                    <img class="section_picture" src="img/host_workspace.jpg" alt="picture of our workspace">
                 </section>
                <section id="bottom_section">
                 <img class="section_picture" src="img/host_servers.jpg" alt="picture of our servers">
-                <article>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga sequi illum officiis odio explicabo temporibus possimus praesentium ipsum vero similique animi, numquam nemo ea vitae obcaecati illo corrupti provident pariatur, adipisci eligendi, ut rem! Dolor iste provident natus inventore in quibusdam tempore, molestiae recusandae maiores repellendus rem repudiandae eos deleniti, aliquam minima nostrum saepe voluptates accusantium officiis odit ipsam? Necessitatibus, minima? Facilis illo maiores, nam nulla enim iure sit possimus eaque deleniti, quos nihil, distinctio consequatur blanditiis suscipit accusamus molestias.</article>
-                <article>We come from a background of NASA experience and Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quidem cumque quas distinctio! Natus, perspiciatis reiciendis hic voluptas quidem ullam pariatur quo deleniti assumenda. Nesciunt asperiores aspernatur dolores ab sapiente aperiam sunt necessitatibus et fuga ex placeat, veritatis fugiat eligendi minima eum? Dolores facere porro doloribus eius vel quis quo. </article>
+                  <div class="text_block">
+                   <h1>How we operate our servers</h1>
+                   <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, enim natus dolorem labore reprehenderit eveniet sit? Voluptas atque debitis voluptatum beatae dolor eos cum in, eaque molestias sequi voluptate incidunt voluptates perspiciatis deserunt vel aliquam quisquam, quidem neque cumque expedita sapiente quo odit consequatur ullam. Magni voluptates tempore consequuntur ut repudiandae laborum maxime tenetur neque facilis? Animi eligendi ratione pariatur?</article>
+                   <h3>Maintenance</h3>
+                   <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus sequi alias odit, accusantium eveniet quasi a vel. Id accusamus, architecto recusandae quas accusantium nostrum eius nemo. Porro cum ipsam molestias saepe nihil natus harum repudiandae magni non provident recusandae sint adipisci magnam, vero aperiam maiores, quis atque impedit maxime dolor.</article>
+                  </div>
+                </section>  
 
-
-               </section>
                
             </section>
 
