fixat innehåll till support

--- a/support.html
+++ b/support.html
@@ -34,14 +34,24 @@
         <main class="one_main">
             <h1>SUPPORT</h1>
             <section class="main_section">
-                <article>We offer support 24/7, if you need any kind of help, our staff will be ready at all time. Out staff can be reached in multiple ways to make sure you have it easy. You can contact us on phone/sms/discord/email. some of our other things are for example:</article>
-                <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam sapiente, maiores omnis perspiciatis expedita possimus commodi, eos cupiditate nostrum, ipsam minima placeat distinctio praesentium sunt obcaecati repudiandae voluptatibus! Ratione exercitationem fugit cumque eum? Doloremque dolorem fuga, officiis doloribus repudiandae voluptatum pariatur vel quis? Amet repellat, iusto atque beatae accusantium animi.</article>
-                <section><img class="section_picture" src="img/host_serverexpert.jpg" alt="picture of serverexpert"><img class="section_picture" src="img/host_serverexpert_2.jpg" alt="picture of another serverexpert"></section>
-                <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam sapiente, maiores omnis perspiciatis expedita possimus commodi, eos cupiditate nostrum, ipsam minima placeat distinctio praesentium sunt obcaecati repudiandae voluptatibus! Ratione exercitationem fugit cumque eum? Doloremque dolorem fuga, officiis doloribus repudiandae voluptatum pariatur vel quis? Amet repellat, iusto atque beatae accusantium animi.</article>
-                <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam sapiente, maiores omnis perspiciatis expedita possimus commodi, eos cupiditate nostrum, ipsam minima placeat distinctio praesentium sunt obcaecati repudiandae voluptatibus! Ratione exercitationem fugit cumque eum? Doloremque dolorem fuga, officiis doloribus repudiandae voluptatum pariatur vel quis? Amet repellat, iusto atque beatae accusantium animi.</article>
-                <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aperiam ea sequi in cupiditate harum quia, velit consequuntur est quas itaque, quae deserunt ullam necessitatibus. Suscipit porro qui nulla sequi eveniet rerum optio recusandae nostrum repellat sunt praesentium magni tenetur in excepturi velit quidem dolore deserunt, nemo, ducimus iste labore?</article>
-                <article>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed totam placeat necessitatibus fuga laboriosam, labore facere odit architecto expedita culpa, illum sunt odio quam illo harum veritatis ipsam iure vel temporibus, aspernatur voluptatibus ipsum? Nobis corrupti sint eaque numquam. Harum fugit incidunt reprehenderit ab reiciendis consequatur possimus facilis animi quae porro, eius obcaecati vitae quibusdam odit exercitationem beatae quidem ut at cupiditate voluptate sequi optio maxime. Suscipit fugit odio reiciendis, aliquam doloribus rem? Corrupti unde dolore fugiat dolorum, et omnis nobis provident, soluta in quia, ab voluptatibus ex dolor. Est, sequi blanditiis? Vero similique quae velit dolorum doloribus, tempore voluptates!</article>
-                
+                <div id="top_box_flex">
+                 <div class="top_box" id="top_box1">
+                     <section class="support_title">Ticket</section>
+                     <section class="support_undertext">Need support? send in a ticket to our staff for personal help.</section>
+                    <a href=""><div class="corner_button">Submit Ticket</div></a>
+                 </div>
+                 <div class="top_box" id="top_box2">
+                    <section class="support_title">Billing</section>
+                    <section class="support_undertext">Got a billing query? Contact our billing team</section>
+                   <a href=""><div class="corner_button">Submit a billing query</div></a>
+                 </div>
+                </div>
+               <div class="bottom_box">
+                <section class="support_title">EzHost is also on discord!</section>
+                <section class="support_undertext">EzHosts discord channel gives you the place to meet Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos alias illo reprehenderit odit accusantium tempora minima commodi tempore quidem totam incidunt, sequi eveniet repellat placeat harum beatae veritatis! Repellat, voluptate.</section>
+                <img id="bottom_box_discordlogo"src="/img/host_discord_logo.png" alt="discord_logo">
+               <a id="discord_button"href="https://discord.gg/mcRsZmEq"><div class="corner_button">Join our discord</div></a>
+               </div>
             </section>
 
         </main>
