skaffa lite mer fonts

--- a/service.html
+++ b/service.html
@@ -32,7 +32,7 @@
          </nav>
         </div>
         <main class="two_main" class="grid_wrapper_double">
-            <h1>Our Hosts</h1>
+            <h1 class="topic_tagg">Our Hosts</h1>
             <div class="game_wrapper">
             <a href="account.html" id="game01" class="game_preview">ARK - 9,99€/month</a>
             <a href="account.html" id="game02" class="game_preview">Minecraft - 4,99€/month</a>
