--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
          </nav>
         </div>
         <main class="one_main">
-            <h1>ABOUT</h1>
+            <h1 class="topic_tagg">ABOUT</h1>
             <section class="main_section" class="single_section">
                 <section id="top_section">
                     <div class="text_block">
