--- a/news.html
+++ b/news.html
@@ -33,7 +33,7 @@
          </nav>
         </div>
         <main class="one_main">
-            <h1>NEWS</h1>
+            <h1 class="topic_tagg">NEWS</h1>
             <section class="main_section">
                 <article>
                     <h1>Big news!</h1>
