--- a/support.html
+++ b/support.html
@@ -32,7 +32,7 @@
          </nav>
         </div>
         <main class="one_main">
-            <h1>SUPPORT</h1>
+            <h1 class="topic_tagg">SUPPORT</h1>
             <section class="main_section">
                 <div id="top_box_flex">
                  <div class="top_box" id="top_box1">
