--- a/about.html
+++ b/about.html
@@ -38,20 +38,30 @@
                     <div class="text_block">
                         <h1>How we came to be</h1>
                    <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, adipisci natus recusandae numquam harum ex sequi facere quas necessitatibus quo provident magnam repellendus cum. Itaque modi expedita dolores voluptatem minus est, quis autem possimus maxime quidem dolorum doloribus, quibusdam alias et. At sit voluptatibus, ab neque voluptas dolorem veniam assumenda placeat unde, soluta dolorum libero facere ad in? Labore aliquam illum nemo beatae iste quam, dolores laboriosam accusantium recusandae ab iusto neque at aperiam, non magnam odio a magni esse!</article>
-                   <h3>Our future goals</h3>
+                   <h3>Our development</h3>
                    <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quo vero nesciunt optio, harum eveniet doloremque! Odio adipisci deserunt possimus cupiditate fuga temporibus delectus neque veniam, debitis consequuntur qui dolorum dolore, provident amet quis aperiam atque, ipsa a vitae consequatur inventore? Debitis atque ratione animi dolorum aliquid distinctio tempore perferendis libero voluptas, nam vitae facere esse architecto alias voluptatem est.</article>
                 </div>
                    <img class="section_picture" src="img/host_workspace.jpg" alt="picture of our workspace">
                 </section>
+               
                <section id="bottom_section">
                 <img class="section_picture" src="img/host_servers.jpg" alt="picture of our servers">
                   <div class="text_block">
                    <h1>How we operate our servers</h1>
                    <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, enim natus dolorem labore reprehenderit eveniet sit? Voluptas atque debitis voluptatum beatae dolor eos cum in, eaque molestias sequi voluptate incidunt voluptates perspiciatis deserunt vel aliquam quisquam, quidem neque cumque expedita sapiente quo odit consequatur ullam. Magni voluptates tempore consequuntur ut repudiandae laborum maxime tenetur neque facilis? Animi eligendi ratione pariatur?</article>
-                   <h3>Maintenance</h3>
+                   <h3>Security is a priority of ours</h3>
                    <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus sequi alias odit, accusantium eveniet quasi a vel. Id accusamus, architecto recusandae quas accusantium nostrum eius nemo. Porro cum ipsam molestias saepe nihil natus harum repudiandae magni non provident recusandae sint adipisci magnam, vero aperiam maiores, quis atque impedit maxime dolor.</article>
                   </div>
                 </section>  
+                <section id="top_section">
+                    <div class="text_block">
+                        <h1>Our future goals</h1>
+                   <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, adipisci natus recusandae numquam harum ex sequi facere quas necessitatibus quo provident magnam repellendus cum. Itaque modi expedita dolores voluptatem minus est, quis autem possimus maxime quidem dolorum doloribus, quibusdam alias et. At sit voluptatibus, ab neque voluptas dolorem veniam assumenda placeat unde, soluta dolorum libero facere ad in? Labore aliquam illum nemo beatae iste quam, dolores laboriosam accusantium recusandae ab iusto neque at aperiam, non magnam odio a magni esse!</article>
+                   <h3>What we look forward to</h3>
+                   <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quo vero nesciunt optio, harum eveniet doloremque! Odio adipisci deserunt possimus cupiditate fuga temporibus delectus neque veniam, debitis consequuntur qui dolorum dolore, provident amet quis aperiam atque, ipsa a vitae consequatur inventore? Debitis atque ratione animi dolorum aliquid distinctio tempore perferendis libero voluptas, nam vitae facere esse architecto alias voluptatem est.</article>
+                </div>
+                   <img class="section_picture" src="img/host_future.jpg" alt="picture of futureistik data in the air">
+                </section>
 
                
             </section>
