--- a/support.html
+++ b/support.html
@@ -50,7 +50,7 @@
                 <section class="support_title">EzHost is also on discord!</section>
                 <section class="support_undertext">EzHosts discord channel gives you the place to meet Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos alias illo reprehenderit odit accusantium tempora minima commodi tempore quidem totam incidunt, sequi eveniet repellat placeat harum beatae veritatis! Repellat, voluptate.</section>
                 <img id="bottom_box_discordlogo"src="/img/host_discord_logo.png" alt="discord_logo">
-               <a id="discord_button"href="https://discord.gg/mcRsZmEq"><div class="corner_button">Join our discord</div></a>
+               <a id="discord_button"href="https://discord.gg/mcRsZmEq" target="_blank"><div class="corner_button">Join our discord</div></a>
                </div>
             </section>
 
