--- a/support.html
+++ b/support.html
@@ -33,7 +33,7 @@
         </div>
         <main class="one_main">
             <h1 class="topic_tagg">SUPPORT</h1>
-            <section class="main_section">
+            <section class="main_section" id="support_section">
                 <div id="top_box_flex">
                  <div class="top_box" id="top_box1">
                      <section class="support_title">Ticket</section>
