--- a/news.html
+++ b/news.html
@@ -14,7 +14,7 @@
     <div class="grid_wrapper_single">
         
         <div class="headnav">
-            <header> <a href="index.html"><img class="ezhost_logo"src="/img/host_ezhost_logo.png" alt="ezhost logga">EzHost</a></header>
+            <header> <a href="index.html"><img class="ezhost_logo" src="/img/host_ezhost_logo.png" alt="ezhost logga">EzHost</a></header>
          <nav>
              <ul class="navlinks">
                  <li ><a href="index.html">Home</a></li>
@@ -34,7 +34,7 @@
         </div>
         <main class="one_main">
             <h1 class="topic_tagg">NEWS</h1>
-            <section class="main_section" class="news_sections">
+            <section class="main_section">
                 <article>
                     <h1 class="section_title">Big news!</h1>
                     <section>New annonsements Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ullam maiores quo reprehenderit illo quos doloremque facilis rerum? Error, tenetur tempore soluta eos sint culpa ex? Enim ut commodi deserunt quibusdam! Corporis quidem quis eligendi, dignissimos fugit atque assumenda doloremque, quod et maxime cum soluta facilis quo cupiditate vero temporibus modi optio pariatur consectetur recusandae. Ipsum expedita eaque nihil, quasi atque aperiam distinctio ut perspiciatis, debitis velit magni eligendi qui praesentium commodi accusamus consequuntur fugit aliquid suscipit. Ducimus odit recusandae, quis voluptatem itaque perspiciatis adipisci beatae suscipit earum rerum tenetur deserunt distinctio similique neque. Optio saepe dignissimos delectus odit distinctio!</section>
@@ -43,12 +43,12 @@
                 <article>
                     <h1>Newly Released Games</h1>
                     <section>
-                        <img class="game_highlight"src="img/game_cover_1.png" alt="picture of game artcover">
-                        <img class="game_highlight"src="img/game_cover_2.png" alt="picture of game artcover">
-                        <img class="game_highlight"src="img/game_cover_3.jpg" alt="picture of game artcover">
-                        <img class="game_highlight"src="img/game_cover_4.png" alt="picture of game artcover">
-                        <img class="game_highlight"src="img/game_cover_5.png" alt="picture of game artcover">
-                        <img class="game_highlight"src="img/game_cover_6.png" alt="picture of game artcover">
+                        <img class="game_highlight" src="img/game_cover_1.png" alt="picture of game artcover">
+                        <img class="game_highlight" src="img/game_cover_2.png" alt="picture of game artcover">
+                        <img class="game_highlight" src="img/game_cover_3.jpg" alt="picture of game artcover">
+                        <img class="game_highlight" src="img/game_cover_4.png" alt="picture of game artcover">
+                        <img class="game_highlight" src="img/game_cover_5.png" alt="picture of game artcover">
+                        <img class="game_highlight" src="img/game_cover_6.png" alt="picture of game artcover">
 
 
 
