--- a/service.html
+++ b/service.html
@@ -13,7 +13,7 @@
 
     <div id="grid_wrapper_service">
         <div class="headnav">
-        <header> <a href="index.html"><img class="ezhost_logo"src="/img/host_ezhost_logo.png" alt="ezhost logga">EzHost</a></header>
+        <header> <a href="index.html"><img class="ezhost_logo" src="/img/host_ezhost_logo.png" alt="ezhost logga">EzHost</a></header>
          <nav>
              <ul class="navlinks">
                  <li ><a href="index.html">Home</a></li>
@@ -31,7 +31,7 @@
              </div>
          </nav>
         </div>
-        <main class="two_main" class="grid_wrapper_double">
+        <main id="two_main" class="grid_wrapper_double">
             <h1 class="topic_tagg">Our Hosts</h1>
             <div class="game_wrapper">
             <a href="account.html" id="game01" class="game_preview">ARK - 9,99€/month</a>
