--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
     <div class="grid_wrapper_single">
         <div class="headnav">
-            <header> <a href="index.html"><img class="ezhost_logo"src="/img/host_ezhost_logo.png" alt="ezhost logga">EzHost</a></header>
+            <header> <a href="index.html"><img class="ezhost_logo" src="/img/host_ezhost_logo.png" alt="ezhost logga">EzHost</a></header>
          <nav>
              <ul class="navlinks">
                  <li ><a href="index.html">Home</a></li>
@@ -33,8 +33,8 @@
         </div>
         <main class="one_main">
             <h1 class="topic_tagg">ABOUT</h1>
-            <section class="main_section" class="single_section">
-                <section id="top_section">
+            <section class="main_section">
+                <section class="top_section">
                     <div class="text_block">
                         <h1>How we came to be</h1>
                    <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, adipisci natus recusandae numquam harum ex sequi facere quas necessitatibus quo provident magnam repellendus cum. Itaque modi expedita dolores voluptatem minus est, quis autem possimus maxime quidem dolorum doloribus, quibusdam alias et. At sit voluptatibus, ab neque voluptas dolorem veniam assumenda placeat unde, soluta dolorum libero facere ad in? Labore aliquam illum nemo beatae iste quam, dolores laboriosam accusantium recusandae ab iusto neque at aperiam, non magnam odio a magni esse!</article>
@@ -53,7 +53,7 @@
                    <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus sequi alias odit, accusantium eveniet quasi a vel. Id accusamus, architecto recusandae quas accusantium nostrum eius nemo. Porro cum ipsam molestias saepe nihil natus harum repudiandae magni non provident recusandae sint adipisci magnam, vero aperiam maiores, quis atque impedit maxime dolor.</article>
                   </div>
                 </section>  
-                <section id="top_section">
+                <section class="top_section">
                     <div class="text_block">
                         <h1>Our future goals</h1>
                    <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, adipisci natus recusandae numquam harum ex sequi facere quas necessitatibus quo provident magnam repellendus cum. Itaque modi expedita dolores voluptatem minus est, quis autem possimus maxime quidem dolorum doloribus, quibusdam alias et. At sit voluptatibus, ab neque voluptas dolorem veniam assumenda placeat unde, soluta dolorum libero facere ad in? Labore aliquam illum nemo beatae iste quam, dolores laboriosam accusantium recusandae ab iusto neque at aperiam, non magnam odio a magni esse!</article>
